--- a/src/stylesheets/abstracts/_mixins.scss
+++ b/src/stylesheets/abstracts/_mixins.scss
@@ -32,3 +32,18 @@
   }
 }
 
+// Insert simple media queries with terse syntax.
+// @author Hugo Giraudel
+// @link https://www.sitepoint.com/using-sass-maps/
+@mixin respond-to($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+    @media (min-width: #{map-get($breakpoints, $breakpoint)}) {
+      @content;
+    }
+  }
+
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+        + "Please make sure it is defined in `$breakpoints` map.";
+  }
+}
