--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -7,13 +7,22 @@ body {
 }
 
 
-html, body, h4, h5, h6, p {
-  font-family: 'Nunito Sans', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Raleway', sans-serif;
+  color: $text-color;
+}
+
+h1 {
+  font-weight: 800;
 }
 
 /**
  * Headers should generally use the same fonts.
  */
-h1, h2, h3 {
-  font-family: 'Nunito', sans-serif;
+html, body, p, div, span {
+  font-family: 'Raleway', serif;
+}
+
+p {
+  font-weight: 200;
 }
