--- a/src/stylesheets/bundler/main.scss
+++ b/src/stylesheets/bundler/main.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,400,800');
 
 // 1. Configuration and helpers
 @import '../abstracts/variables',
