--- a/src/stylesheets/bundler/main.scss
+++ b/src/stylesheets/bundler/main.scss
@@ -21,6 +21,8 @@
 
 // 5. Components
 @import '../components/name',
+'../components/library',
+'../components/card',
 '../components/searchBox';
 
 // 6. Page-specific styles
