--- a/src/stylesheets/bundler/main.scss
+++ b/src/stylesheets/bundler/main.scss
@@ -21,9 +21,7 @@
 '../layout/footer';
 
 // 5. Components
-@import '../components/name',
-'../components/library',
-'../components/card';
+@import '../components/card';
 
 // 6. Page-specific styles
 @import '../pages/home';
