--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -6,9 +6,9 @@
  * Set up a decent box model on the root element
  */
 html, body, #root {
-  position: absolute;
   box-sizing: border-box;
   width: 100%;
+  max-width: 1300px;
   height: 100%;
   margin: auto;
   padding: 0;
